manifests/api/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: beacon
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
